Updated Featured CSS

--- a/src/index.css
+++ b/src/index.css
@@ -250,13 +250,7 @@ header {
 
 .header__img--wrapper {
   padding: 20px;
-
-  /* Added this after the tutorial to 
-  show it over the wave on larger screens */
   z-index: 50;
-  
-  /* Added this after the tutorial to 
-  make landing page responsive on laptops */
   max-height: 50vh;
 }
 
@@ -361,7 +355,7 @@ FEATURES
 
 */
 
-#features {
+#featured {
   padding-top: 8vw;
   background-color: rgba(115, 66, 214, 0.1);
 }
