--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .App {
@@ -12,21 +13,28 @@
   min-height: 100vh;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 nav {
   height: 80px;
+  width: 100vw;
   display: flex;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
   background-color: white;
-  position: relative;
+  position: fixed;
+  top: 0;
+  z-index: 100;
 }
 
 img {
@@ -42,12 +50,6 @@ a {
   text-decoration: none;
 }
 
-a:hover {
-  text-decoration: underline;
-}
-
-
-
 ul {
   display: flex;
 }
@@ -58,7 +60,7 @@ li {
 
 h1 {
   font-size: 56px;
-  color: #7342d6;
+  color: #f9a826;
   margin-bottom: 24px;
   text-align: center;
 }
@@ -78,16 +80,21 @@ button:active {
 }
 
 .btn {
-  background-color: #7342d6;
+  background-color: #f9a826;
   color: white;
   padding: 12px 24px;
   font-size: 20px;
   border-radius: 4px;
   border: none;
+  transition: all 300ms ease;
 }
 
-.purple {
-  color: #7342d6;
+.btn:hover {
+  background-color: #a06b17;
+}
+
+.yellow {
+  color: #f9a826;
 }
 
 .logo {
@@ -105,11 +112,31 @@ button:active {
 }
 
 .nav__link {
-  text-decoration: none;
   font-size: 20px;
   font-weight: bold;
   padding: 8px;
-  color: #7342d6;
+  color: #f9a826;
+}
+
+.link__hover {
+  position: relative;
+}
+
+.link__hover::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 4px;
+  left: 0;
+  background-color: #f9a826;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.link__hover:hover::before {
+  transform: scaleX(1);
 }
 
 .nav__list {
@@ -119,31 +146,27 @@ button:active {
   justify-content: center;
 }
 
-.nav__link:hover {
-  text-decoration: underline;
-}
-
-.nav__link--primary {
-  border: 2px solid #7342d6;
-  border-radius: 4px;
-}
-
-.nav__link--primary:hover {
-  text-decoration: none;
-}
-
 .nav__icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #7342d6;
+  color: #f9a826;
   font-size: 20px;
   position: relative;
   margin-left: 8px;
+  transition: all 300ms ease;
+}
+
+.nav__icon:hover {
+  transform: scale(1.1);
+}
+
+.nav__icon:active {
+  transform: scale(0.8);
 }
 
 .cart__length {
-  background-color: red;
+  background-color: #900000;
   color: white;
   width: 18px;
   height: 18px;
@@ -162,7 +185,7 @@ button:active {
   background-color: transparent;
   font-size: 32px;
   border: none;
-  color: #7342d6;
+  color: #f9a826;
   display: none;
 }
 
@@ -217,7 +240,6 @@ button:active {
   color: white;
 }
 
-
 /* 
 
 LANDING
@@ -225,11 +247,11 @@ LANDING
 */
 
 #landing {
-  background-color: rgba(115, 66, 214, 0.1)
+  background-color: rgba(214, 187, 66, 0.1);
 }
 
 header {
-  height: calc(100vh - 80px);
+  height: 100vh;
 }
 
 .header__container {
@@ -258,8 +280,8 @@ header {
   padding: 56px 0;
 }
 
-.books__container {
-  padding: 24px 0;
+.magicItems__container {
+  padding-top: 112px;
 }
 
 .row {
@@ -331,8 +353,8 @@ HIGHLIGHTS
 }
 
 .highlight__img {
-  border: 2px solid #7342d65d;
-  color: #7342d6;
+  border: 2px solid #f9a8265d;
+  color: #f9a826;
   width: 100px;
   height: 100px;
   display: flex;
@@ -357,32 +379,30 @@ FEATURES
 
 #featured {
   padding-top: 8vw;
-  background-color: rgba(115, 66, 214, 0.1);
+  background-color: rgba(214, 187, 66, 0.1);
 }
 
-.books {
+.magicItems {
   display: flex;
   flex-wrap: wrap;
   margin: 0 -24px;
 }
 
-.book {
+.magicItem {
   width: 25%;
   padding: 24px;
   transition: all 300ms ease;
 }
 
-.book:hover {
+.magicItem:hover {
   transform: translateY(-4px);
 }
 
-.book__img {
-  max-height: 320px;
-  max-width: 250px;
+.magicItem__img {
   transition: all 300ms ease;
 }
 
-.book__img--skeleton {
+.magicItem__img--skeleton {
   width: 100%;
   max-width: 250px;
   height: 320px;
@@ -395,47 +415,48 @@ FEATURES
   margin-bottom: 8px;
 }
 
-.book__title--skeleton {
+.magicItem__title--skeleton {
   height: 21px;
   width: 100%;
 }
 
-.book__rating--skeleton {
+.magicItem__rating--skeleton {
   width: 100px;
   height: 19px;
 }
 
-.book__price--skeleton {
-  width : 200px;
+.magicItem__price--skeleton {
+  width: 200px;
   height: 19px;
 }
 
-.book__link {
+.magicItem__link {
   color: #242424;
 }
 
-.book__img--wrapper {
+.magicItem__img--wrapper {
   margin-bottom: 8px;
   border-radius: 4px;
   overflow: hidden;
   display: flex;
+  box-shadow: 1px 1px 4px 1px #606266;
 }
 
-.book__title {
+.magicItem__title {
   font-size: 20px;
   margin-bottom: 8px;
 }
 
-.book__title--link {
+.magicItem__title--link {
   color: #242424;
 }
 
-.book__ratings {
+.magicItem__ratings {
   margin-bottom: 8px;
   color: #fabf2a;
 }
 
-.book__price--normal {
+.magicItem__price--normal {
   text-decoration: line-through;
   padding-right: 6px;
   color: #bfbfbf;
@@ -448,7 +469,7 @@ EXPLORE
 */
 
 #explore {
-  background-color: rgba(115, 66, 214, 0.1);
+  background-color: rgba(214, 187, 66, 0.1);
 }
 
 /* 
@@ -483,34 +504,38 @@ footer {
   padding: 0 8px;
 }
 
+.footer__link:hover {
+  text-decoration: underline;
+}
+
 /* 
 **
 
-BOOKS PAGE
+MAGIC ITEMS PAGE
 
 **
 */
 
-#books__body {
-  background-color: rgba(115, 66, 214, 0.1);
+#magicItems__body {
+  background-color: rgba(214, 187, 66, 0.1);
   flex: 1;
   display: flex;
   flex-direction: column;
 }
 
-#books__main {
+#magicItems__main {
   flex: 1;
-  background-color: rgb(248,249,250);
+  background-color: rgb(248, 249, 250);
 }
 
-.books__header {
+.magicItems__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 24px;
 }
 
-.books__header--title {
+.magicItems__header--title {
   margin-bottom: 0;
 }
 
@@ -527,14 +552,14 @@ select {
   max-width: 200px;
 }
 
-.books__loading {
+.magicItems__loading {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   padding-top: 60px;
   font-size: 60px;
-  color: #7342d6;
+  color: #f9a826;
 }
 
 .fa-spinner {
@@ -553,19 +578,19 @@ select {
 
 /* 
 
-  book/:id
+  magicItem/:id
     
 */
 
-.container__book--selected {
+.container__magicItem--selected {
   padding-top: 16px;
 }
 
-.book__selected {
+.magicItem__selected {
   display: flex;
 }
 
-.book__selected--figure {
+.magicItem__selected--figure {
   width: 40%;
   padding: 16px 32px;
   display: flex;
@@ -573,13 +598,13 @@ select {
   align-items: center;
 }
 
-.book__selected--img {
+.magicItem__selected--img {
   max-height: 500px;
   width: auto;
   max-width: 100%;
 }
 
-.book__selected--description {
+.magicItem__selected--description {
   width: 60%;
   padding: 16px 32px;
   display: flex;
@@ -587,7 +612,7 @@ select {
   align-items: flex-start;
 }
 
-.book__selected--top {
+.magicItem__selected--top {
   padding: 0 24px;
   margin-bottom: 8px;
   font-size: 32px;
@@ -596,7 +621,7 @@ select {
   align-items: center;
 }
 
-.book__selected--link {
+.magicItem__selected--link {
   color: #242424;
 }
 
@@ -604,28 +629,28 @@ select {
   font-size: 30px;
 }
 
-.book__selected--title--top {
+.magicItem__selected--title--top {
   margin-left: 10px;
   margin-bottom: 0;
 }
 
-.book__summary {
+.magicItem__summary {
   margin-bottom: 16px;
 }
 
-.book__selected--title {
-  margin-bottom: 8px
-}
-
-.book__summary--title {
+.magicItem__selected--title {
   margin-bottom: 8px;
 }
 
-.book__summary--para {
+.magicItem__summary--title {
+  margin-bottom: 8px;
+}
+
+.magicItem__summary--para {
   margin-bottom: 16px;
 }
 
-.book__price {
+.magicItem__price {
   font-size: 16px;
   margin: 8px 0 24px 0;
 }
@@ -642,7 +667,7 @@ select {
 */
 
 .cart__header {
-  background-color: #7342d6;
+  background-color: #f9a826;
   margin: 0 24px;
   padding: 8px 16px;
   color: white;
@@ -659,7 +684,7 @@ select {
   margin-bottom: 16px;
 }
 
-.cart__book {
+.cart__magicItem {
   width: 60%;
   display: flex;
 }
@@ -684,30 +709,29 @@ select {
   width: 60px;
 }
 
-.cart__book--img {
+.cart__magicItem--img {
   width: 100%;
   max-width: 90px;
   max-height: 128px;
 }
 
-
-.cart__book--info {
+.cart__magicItem--info {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 8px 16px;
 }
 
-.cart__book--title {
+.cart__magicItem--title {
   font-size: 20px;
   margin-bottom: 16px;
 }
 
-.cart__book--price {
+.cart__magicItem--price {
   margin-bottom: 16px;
 }
 
-.cart__book--remove {
+.cart__magicItem--remove {
   background-color: transparent;
   color: #cf0000;
   border: none;
@@ -735,7 +759,7 @@ select {
 }
 
 .total__sub-total {
-  border-top: 2px solid #7342d6;
+  border-top: 2px solid #f9a826;
   padding-top: 24px;
 }
 
@@ -779,22 +803,21 @@ select {
     font-size: 18px;
   }
 
-  .book {
+  .magicItem {
     width: 50%;
   }
 
-  .book__selected {
+  .magicItem__selected {
     flex-direction: column;
   }
-  .book__selected--figure {
+  .magicItem__selected--figure {
     width: 100%;
     justify-content: flex-start;
   }
-  .book__selected--description {
+  .magicItem__selected--description {
     width: 100%;
   }
 }
-
 
 /* SMALL PHONES, LARGE SMARTPHONES */
 @media (max-width: 550px) {
@@ -814,10 +837,10 @@ select {
     margin-bottom: 24px;
   }
 
-  .cart__book--img {
+  .cart__magicItem--img {
     display: none;
   }
-  .cart__book--info {
+  .cart__magicItem--info {
     padding-left: 0;
   }
 }
