--- a/src/index.css
+++ b/src/index.css
@@ -844,3 +844,9 @@ select {
     padding-left: 0;
   }
 }
+
+@media (max-height: 1000px) {
+  .header__description {
+    padding-top: 128px;
+  }
+}
