--- a/src/index.css
+++ b/src/index.css
@@ -261,7 +261,7 @@ header {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .header__description {
@@ -842,5 +842,11 @@ select {
   }
   .cart__magicItem--info {
     padding-left: 0;
+  }
+}
+
+@media (max-height: 1000px) {
+  .header__description {
+    padding-top: 128px;
   }
 }
