--- a/src/index.css
+++ b/src/index.css
@@ -843,6 +843,12 @@ select {
   .cart__magicItem--info {
     padding-left: 0;
   }
+  .magicItems__header {
+    flex-direction: column;
+  }
+  .magicItems__header--title {
+    margin-bottom: 12px;
+  }
 }
 
 @media (max-height: 1000px) {
